# Blood_Test_Assesment

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
db/: chroma.sqlite3
src/blood_analyst_crew/: crew.py  main.py
src/blood_analyst_crew/config/: agents.yaml  tasks.yaml
