[tool.poetry]
name = "blood_analyst_crew"
version = "0.1.0"
description = "optimize-response-crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}
openai = ">=1.13.3,<2.0.0"

[tool.poetry.scripts]
blood_analyst_crew = "blood_analyst_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

